cleared the video white space bug and added type to the source tag

--- a/style.css
+++ b/style.css
@@ -17,11 +17,13 @@ html {
     font-size: 62.5%;
 }
 
-
 body {
-    height: 100vh;
     color: #fff;
-    /* overflow: hidden; */
+}
+
+html ,body {
+    height: 100%;
+    overflow: hidden;
 }
 
 a {
@@ -43,10 +45,11 @@ ul {
 video {
     position: fixed;
     z-index: -9999;
-    min-height: 100vh;
-    min-width: 100vw;
+    width: 100%;
+    height: 100%;
     right: 0;
     bottom: 0;
+    object-fit: cover;
     filter: brightness(0.5);
 }
 
